--- a/Kitten Page/stylesheet.css
+++ b/Kitten Page/stylesheet.css
@@ -29,6 +29,20 @@ button {
       background-color: #F2C8C4;
   }
 
+.button2 {
+    background-color: #A66A6A;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    outline: #D9AB91;
+    position: fixed;
+    bottom: 410px;
+}
+
   h1 {
     font-family: 'Vollkorn', regular;
     font-size: 60px;
